# proteinRL

./: README.md  main.py  pyproject.toml
config/: __init__.py  config_schema.py  config_utils.py  defaults.yaml
config/environment/: environment.yaml  environment_schema.py
config/model/: model1.yaml  model_schema.py
config/testing/: testing.yaml
config/training/: training_schema.py  training_v0.yaml
learner/: learner.py
saved-model/PPO_Protein_Design/PPO_1/: events.out.tfevents.1768501202.Lorenzos-MacBook-Air-2.local.45600.0
saved-model/PPO_Protein_Design/PPO_2/: events.out.tfevents.1768501227.Lorenzos-MacBook-Air-2.local.45876.0
saved-model/PPO_Protein_Design_rng_length/: eval.monitor.csv  evaluations.npz  monitor.csv
scripts/: rollout.py
src/protein_design_env/: __init__.py  amino_acids.py  constants.py  environment.py
test/: test_algo.py  test_env.py
utility/: logging_config.py  train_loss.py
utility/results_csv/problem_1/: A2C_Protein_Design_A2C_1.csv  DQN_Protein_Design_DQN_1.csv  PPO_Protein_Design_PPO_1.csv  rollout_ep_length_mean_A2C_1.csv  rollout_ep_length_mean_DQN_1.csv  rollout_ep_length_mean_PPO_1.csv  train_entropy_loss_A2C.csv  train_entropy_loss_PPO.csv  train_loss_DQN.csv  train_loss_PPO.csv  train_policy_loss_A2C.csv  train_value_loss_A2C.csv  train_value_loss_PPO.csv
utility/results_csv/problem_2/: mean_ep_length_A2C_2.csv  mean_ep_length_DQN_2.csv  mean_ep_length_PPO_2.csv  mean_reward_A2C_2.csv  mean_reward_DQN_2.csv  mean_reward_PPO_2.csv  rollout_ep_length_mean_A2C_2.csv  rollout_ep_length_mean_DQN_2.csv  rollout_ep_length_mean_PPO_2.csv  rollout_mean_reward_A2C_2.csv  rollout_mean_reward_DQN_3.csv  rollout_mean_reward_PPO_2.csv  train_entropy_loss_A2C_2.csv  train_entropy_loss_PPO_2.csv  train_loss_DQN_2.csv  train_loss_PPO_2.csv  train_policy_loss_A2C_2.csv  train_value_loss_A2C_2.csv  train_value_loss_PPO_2.csv
utility/results_csv/problem_3/: entropy_loss.csv  eval_mean_reward.csv  rollout_mean_reward.csv  train_loss.csv  value_loss.csv
